# qot-stack

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  Makefile  QoT.idl  bbbcontrol.sh  build_qot.sh  changelog.md  data_copy_online  installall.sh  qot-stack.sublime-project  qot-stack.sublime-workspace  readme.md
src/: CMakeLists.txt  CMakeLists.txt~  Coordination.cpp  Coordination.hpp  Notifier.cpp  Notifier.hpp  Timeline.cpp  Timeline.hpp  main.cpp  qot.h  qot_types.h  qot_types.h~  readme.md
src/api/: CMakeLists.txt  qot.c  qot.cpp  qot.h  qot.hpp  readme.md
src/api/c/: CMakeLists.txt  qot.c  qot.h
src/api/cpp/: CMakeLists.txt  qot.cpp  qot.hpp
src/api/cpp/lib/: ClusterHandlers.cpp  ClusterHandlers.hpp  ClusterHandlers.hpp~  ClusterManager.cpp  ClusterManager.hpp  ClusterManager.hpp~  Messenger.cpp  Messenger.hpp  Messenger.hpp~  MessengerInterface.cpp  MsgingEntities.cpp  MsgingEntities.cpp~  PubSub.cpp  PubSub.hpp  PubSubWrapper.cpp  PubSubWrapper.hpp  messenger.hpp  messenger.hpp~
src/api/cpp/msg/: QoT.idl
src/cmake/: FindDDS.cmake  dds_utils.cmake
src/examples/: CMakeLists.txt  helloworld.c  helloworld.cpp  helloworld_capture.cpp  helloworld_compare.cpp  helloworld_timeline.cpp  helloworld_waituntil.cpp
src/examples/c/: CMakeLists.txt  Makefile  beaglebone_gpio.h  helloworld.c  helloworld_capture.c  helloworld_capture_simple.c  helloworld_compare.c  helloworld_control_pwm.c  helloworld_end2end.c  helloworld_gpio.c  helloworld_gpio_vanilla.c  helloworld_linux_test.c  helloworld_tdma1.c  helloworld_tdma2.c  helloworld_timer.c
src/examples/c/sean/: CMakeLists.txt  gpiotest.c  ledapp.c  ledtest.c
src/examples/cpp/: CMakeLists.txt  edge_coordination.cpp  helloworld.cpp  helloworld_cluster.cpp  helloworld_pubsub.cpp  quad-robot_coordination1.cpp  quad-robot_coordination2.cpp  quad-robot_coordinator.cpp  taskplanner_coordination.cpp
src/gps-service/: CMakeLists.txt  gps.c  gps.h  gps_output_compare.c  gps_sync.c
src/gps-service/linuxptp/: clock.h  linregnew.c  linregnew.h  msg.h  port.c  ptp4l.c  servo.c  servo_private.h
src/messages/: Timeline.idl  TimelineC.cpp  TimelineC.h  TimelineS.cpp  TimelineS.h  TimelineTypeSupport.idl  TimelineTypeSupportC.cpp  TimelineTypeSupportC.h  TimelineTypeSupportImpl.cpp  TimelineTypeSupportImpl.h  TimelineTypeSupportS.cpp  TimelineTypeSupportS.h
src/module/: .gitignore  80-qot.rules  CMakeLists.txt  Makefile  ROSELINE-QOT-00A0.dts  backup.c  capes  pollclient.c  polltest.c  polltest.h  qot.c  qot.h  qot_am335x.c  qot_am335x.h  qot_am335x_chronos.c  qot_am335x_gpsdo.c  qot_am335x_lowpower.c  qot_chardev.c  qot_clkdev.c  qot_clock.c  qot_clock.h  qot_core.c  qot_core.h  qot_ioctl.h  qot_module.c  qot_timeline.c  qot_timeline.h  readme.md
src/module/uapi/: QoTclock.c  QoTclock.h  qot.c  qot.h
src/modules/: CMakeLists.txt  Kbuild  Makefile  qot_core.h  qot_timeline.c  readme.md
src/modules/cc1200/: .gitignore  CMakeLists.txt  Kbuild  cc1200.c
src/modules/cc1200/.tmp_versions/: .gitignore  cc1200.mod
src/modules/cc2520/: .gitignore  CMakeLists.txt  Kbuild  cc2520.c
src/modules/cc2520/.tmp_versions/: .gitignore  cc2520.mod
src/modules/dw1000/: .gitignore  CMakeLists.txt  Kbuild  dw1000.c
src/modules/dw1000/.tmp_versions/: .gitignore  dw1000.mod
src/modules/platform_clocks/qot_am335x/: qot_am335x.c
src/modules/qot/: .gitignore  .qot.ko.cmd  .qot.mod.o.cmd  .qot.o.cmd  .qot_chardev_adm.o.cmd  .qot_core.o.cmd  CMakeLists.txt  Kbuild  Makefile  Module.symvers  backup.c  backup2.c  modules.order  qot.ko  qot.mod.c  qot_admin.c  qot_admin.h  qot_admin_chdev.c  qot_admin_sysfs.c  qot_chardev_adm.c  qot_chardev_adm.h  qot_chardev_usr.c  qot_chardev_usr.h  qot_clock.c  qot_clock.h  qot_clock_gl.c  qot_clock_gl.h  qot_clock_sysfs.c  qot_clock_sysfs.h  qot_core.c  qot_core.h  qot_exported.h  qot_internal.h  qot_scheduler.c  qot_scheduler.h  qot_sysfs.c  qot_timeline.c  qot_timeline.h  qot_timeline_chardev.c  qot_timeline_chdev.c  (+9 more)
src/modules/qot/.tmp_versions/: .gitignore  qot.mod
src/modules/qot_am335x/: .gitignore  CMakeLists.txt  Kbuild  Makefile  Module.symvers~  qot_am335x.c
src/modules/qot_am335x/.tmp_versions/: .gitignore  qot_am335x.mod
src/modules/qot_chronos/: .gitignore  CMakeLists.txt  Kbuild  qot_chronos.c
src/modules/qot_chronos/.tmp_versions/: .gitignore  qot_chronos.mod
src/modules/qot_x86/: CMakeLists.txt  Kbuild  qot_x86.c
src/qot-daemon/: CMakeLists.txt  Makefile  qotd.c  test.sh
src/service/: CMakeLists.txt  CMakeLists.txt~  Coordination.cpp  Coordination.hpp  Coordinator.cpp  Coordinator.hpp  Notifier.cpp  Notifier.hpp  Synchronization.cpp  Synchronization.hpp  Timeline.cpp  Timeline.hpp  jamroot  main.cpp  phc2phc.c  readme.md  testptp.c  user-config.jam
src/service/broker/: Broker.cpp  Broker.hpp  Handlers.cpp  Handlers.hpp  ZookeeperInterface.hpp  zk_logic.c  zk_logic.h
src/service/cmake/: FindOpenSplice.cmake  MacroOpenSplice.cmake
src/service/linuxptp/: clock.c  clock.h  pdt.h  port.c  ptp.c  sk.c
src/service/msg/: QoT.idl
src/service/sync/: ProbabilityLib.cpp  ProbabilityLib.hpp  Sync.cpp  Sync.hpp  SyncUncertainty.cpp  SyncUncertainty.hpp
src/service/sync/ntp/: NTP.cpp  NTP.cpp~  NTP.hpp  NTP.hpp~  NTP18.cpp  NTP18.hpp  global_timeline.h  uncertainty_data.h
src/service/sync/ptp/: PTP.cpp  PTP.hpp  PTP18.cpp  PTP18.hpp  uncertainty_data.h
src/test/: CMakeLists.txt  Makefile  beaglebone_gpio.h  beaglebone_gpio_new  gpi.c  helloworld  helloworld.cpp  helloworld_gpio  helloworld_gpio.cpp  helloworld_waitunp  helloworld_waitunp.cpp  qot.cpp  qot.hpp  readme.md  test_qot_chardev_adm.cpp  test_qot_chardev_usr.cpp  test_qot_math.cpp
src/utils/: CMakeLists.txt
src/utils/clockbench/: CMakeLists.txt  ClockBench.cpp
src/utils/test/: Makefile~  beaglebone_gpio_new.cpp  helloworld.cpp  helloworld_gpio.cpp
src/utils/udp-ts/: CMakeLists.txt  udpclient.c  udpserver-qot.c  udpserver.c
src/virt/: CMakeLists.txt  qot_virt.h  qot_virtguest.c  qot_virtguest.h  qot_virthost.c
src/virt/pci_mmio/: qot_pci_ivshmem.c  qot_pci_ivshmem.h  upci.c  upci.h
(+71 files in other folders)
